# esports_model_project

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: baseline_logit.pkl
data/processed/: README.md  matches.parquet
data/raw/: README.md
scripts/: build_meta.py  sanity_report.py
src/esports_quant/: __init__.py  cli.py  config.py
src/esports_quant/data/: dummy.py  opendota.py
src/esports_quant/evaluate/: backtest.py  calibration.py  metrics.py  timecv.py
src/esports_quant/features/: __init__.py  build_features.py  elo.py
src/esports_quant/ingest/: opendota.py  opendota_details.py
src/esports_quant/models/: baseline.py
src/esports_quant/utils/: io.py
tests/: test_elo_features.py  test_pipeline.py
