[tool.poetry]
name = "esports-model-project"
version = "0.1.0"
description = "Portfolio-grade Dota 2 pricing baseline with clean engineering."
authors = ["Dylan McGuinness"]
readme = "README.md"
packages = [{ include = "esports_quant", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2"
numpy = "^1.26"
scipy = "^1.12"
scikit-learn = "^1.5"
pyarrow = "^16.1"
duckdb = "^1.0"
matplotlib = "^3.9"
typer = {version = "^0.12", extras = ["all"]}
requests = "^2.32"
click = "8.1.7"
keyring = "^25.6.0"
python-dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
coverage = "^7.6"
ruff = "^0.5"
mypy = "^1.10"
pre-commit = "^3.7"

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E402", "E501", "E712", "B023"]
# If you prefer to only ignore in scripts, use per-file-ignores instead of the global "ignore":
# per-file-ignores = { "scripts/*.py" = ["E501", "E712", "E402"], "src/esports_quant/ingest/opendota_details.py" = ["E501", "B023"] }

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
warn_redundant_casts = false
warn_unused_configs = false
# Only type-check library code for now
files = ["src"]
